--- a/package.json
+++ b/package.json
@@ -13,3 +13,15 @@
     "build": "react-scripts build"
   }
 }
+"name": "Baoyu-Academic-Website",
+"version": "1.0.0",
+"homepage": "https://baoyudai.github.io/Baoyu-Academic-Website",
+"scripts": {
+  "start": "react-scripts start",
+  "build": "react-scripts build",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d build"
+},
+"devDependencies": {
+  "gh-pages": "^5.0.0"
+}
